--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-jupyterlab = "~=3.6.3"
-numpy = "~=1.24.3"
+scipy = "*"
+jupyterlab = "*"
+pytest = "*"
+numpy = "*"
+pulp = "*"
 
 [dev-packages]
 
